kube/apps/test-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: https-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-test
  namespace: https-test
spec:
  replicas: 1

  selector:
    matchLabels:
      app: https-test

  template:
    metadata:
      labels:
        app: https-test

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - name: http
              containerPort: 80

          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html

      volumes:
        - name: html
          configMap:
            name: https-test-html

---
apiVersion: v1
kind: Service
metadata:
  name: https-test
  namespace: https-test
spec:
  selector:
    app: https-test

  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-test
  namespace: https-test
spec:

  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
      sectionName: websecure

  hostnames:
    - "foo.ksat.pupillo.org"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: https-test
          port: 80
